--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Iain Collins <me@iaincollins.com>",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.9.4",
     "mongodb": "^3.6.3",
     "next": "^9.5.4",
     "next-auth": "^3.1.0",
