--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Iain Collins <me@iaincollins.com>",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "antd": "^4.9.4",
     "mongodb": "^3.6.3",
     "next": "^9.5.4",
