--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/icons": "^4.11.2",
     "antd": "^4.9.4",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.14",
     "next": "^9.5.4",
     "next-auth": "^3.1.0",
     "react": "^16.13.1",
