--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "antd": "^4.9.4",
+    "axios": "^0.21.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "next": "^9.5.4",
